// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PasswordReset /> rendering should render correctly 1`] = `
<div
  className="container content"
  id="reset-password"
>
  <div
    className="inner"
  >
    <form
      className="main-column"
      onSubmit={[Function]}
    >
      <p
        className="label"
      >
        Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it.
      </p>
      <div
        className="fieldset"
      >
        <div
          className="row email"
        >
          <label
            htmlFor="email"
          >
            E-mail
          </label>
          <input
            autoComplete="email"
            className="input "
            id="email"
            name="email"
            onChange={[Function]}
            pattern=".+@.+\\\\..+"
            placeholder="email address"
            required={true}
            title="enter valid email address"
            type="email"
            value=""
          />
        </div>
        <div
          className="row submit"
        >
          <input
            className="button full"
            type="submit"
            value="Reset My Password"
          />
        </div>
      </div>
      <div
        className="row contact-us"
      >
        Please contact us if you have any trouble resetting your password.
      </div>
      <div
        className="row links"
      >
        <Link
          className="link"
          to="/default/login"
        >
          Go back to sign in
        </Link>
      </div>
    </form>
    <Connect(Contact) />
  </div>
</div>
`;

exports[`<PasswordReset /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<div
  className="container content"
  id="reset-password"
>
  <div
    className="inner"
  >
    <form
      className="main-column"
      onSubmit={[Function]}
    >
      <p
        className="label"
      >
        PWD_RESET_ADDITIONAL_TEXT
      </p>
      <div
        className="fieldset"
      >
        <div
          className="row email"
        >
          <label
            htmlFor="email"
          >
            EMAIL
          </label>
          <input
            autoComplete="email"
            className="input "
            id="email"
            name="email"
            onChange={[Function]}
            pattern=".+@.+\\\\..+"
            placeholder="EMAIL_PLACEHOLDER"
            required={true}
            title="EMAIL_PATTERN_DESCRIPTION"
            type="email"
            value=""
          />
        </div>
        <div
          className="row submit"
        >
          <input
            className="button full"
            type="submit"
            value="PWD_RESET"
          />
        </div>
      </div>
      <div
        className="row contact-us"
      >
        PWD_RESET_CONTACT_TEXT
      </div>
      <div
        className="row links"
      >
        <Link
          className="link"
          to="/default/login"
        >
          LOGIN_PAGE_LINK
        </Link>
      </div>
    </form>
    <Connect(Contact) />
  </div>
</div>
`;
